--- a/source/less/blocks/page-photo.less
+++ b/source/less/blocks/page-photo.less
@@ -13,8 +13,9 @@
 }
 
 .page-photo__description {
-  .font-normal();
+  .font-normal-photo();
   text-transform: uppercase;
+  color: #333333;
 }
 
 .page-photo__gallery {
