--- a/source/less/blocks/gallery.less
+++ b/source/less/blocks/gallery.less
@@ -4,7 +4,7 @@
   flex-direction: column;
   margin: 0;
   margin-left: 20px;
-  .font-normal();
+  .font-normal-photo();
   font-weight: bold;
   text-transform: uppercase;
   color: #000000;
