--- a/source/less/mixins.less
+++ b/source/less/mixins.less
@@ -11,3 +11,10 @@
   font-family: "PT Sans", "Arial", sans-serif;
   font-weight: normal;
 }
+
+.font-normal-photo() {
+  font-size: 14px;
+  line-height: 24px;
+  font-family: "PT Sans", "Arial", sans-serif;
+  font-weight: normal;
+}
