исправил ссылку в футере

--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -22,3 +22,13 @@
   font-weight: normal;
   text-transform: uppercase;
 }
+
+.copyright__link {
+  font-size: 14px;
+  line-height: 26px;
+  font-family: "PT Sans", "Arial", sans-serif;
+  font-weight: normal;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #000000;
+}
