--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,5 +1,6 @@
 @import "fonts.less";
 @import "mixins.less";
+@import "global.less";
 @import "blocks/page-header.less";
 @import "blocks/site-list.less";
 @import "blocks/page-main.less";
