--- a/source/less/blocks/advantages-other.less
+++ b/source/less/blocks/advantages-other.less
@@ -21,3 +21,19 @@
   margin-bottom: 25px;
   .font-normal();
 }
+
+@media (min-width: @tablet-width) {
+  .advantages-other {
+    display: flex;
+    justify-content: space-between;
+    padding: 0;
+  }
+
+  .advantages-other__item {
+    width: 170px;
+  }
+
+  .advantages-other__title-town {
+    font-size: 21px;
+  }
+}
