--- a/source/less/mixins.less
+++ b/source/less/mixins.less
@@ -5,6 +5,13 @@
   font-weight: bold;
 }
 
+.font-bold-table() {
+  font-size: 21px;
+  line-height: 26px;
+  font-family: "PT Sans", "Arial", sans-serif;
+  font-weight: bold;
+}
+
 .font-normal() {
   font-size: 14px;
   line-height: 21px;
