--- a/source/less/blocks/advantages-list.less
+++ b/source/less/blocks/advantages-list.less
@@ -18,3 +18,19 @@
   margin-bottom: 40px;
   .font-normal();
 }
+
+@media (min-width: @tablet-width) {
+  .advantages-list {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0;
+    margin: 0;
+  }
+
+  .advantages-list__item {
+    width: 170px;
+    padding-top: 160px;
+    text-align: center;
+  }
+}
