--- a/source/less/blocks/advantages-photo.less
+++ b/source/less/blocks/advantages-photo.less
@@ -13,3 +13,20 @@
   font-size: 18px;
   line-height: 26px;
 }
+
+@media (min-width: @tablet-width) {
+  .advantages-photo {
+    width: 256px;
+  }
+
+  .advantages-photo__image {
+    width: 100%;
+    height: 256px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .advantages-photo {
+    width: 400px;
+  }
+}
