--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,7 +1,8 @@
-.page-footer {
-  width: 140px;
-  padding: 40px 90px 0 90px;
+.page-footer__wrapper {
+  width: 320px;
+  padding: 40px 0 0 0;
   margin: 0 auto;
+  text-align: center;
   color: #000000;
   background-color: #fefefe;
   outline: 5px dotted red;
@@ -15,14 +16,6 @@
   text-transform: uppercase;
 }
 
-.copyright__text {
-  font-size: 14px;
-  line-height: 26px;
-  font-family: "PT Sans", "Arial", sans-serif;
-  font-weight: normal;
-  text-transform: uppercase;
-}
-
 .copyright__link {
   font-size: 14px;
   line-height: 26px;
@@ -31,4 +24,30 @@
   text-transform: uppercase;
   text-decoration: none;
   color: #000000;
+}
+
+@media (min-width: @tablet-width) {
+  .page-footer {
+    width: 768px;
+    margin: 0 auto;
+  }
+
+  .page-footer__wrapper {
+    width: 648px;
+    height: 120px;
+    padding: 0 60px;
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .page-footer {
+    width: 1280px;
+  }
+
+  .page-footer__wrapper {
+    width: 1200px;
+    padding: 0 40px;
+  }
 }
