--- a/source/less/blocks/page-form.less
+++ b/source/less/blocks/page-form.less
@@ -3,3 +3,20 @@
   padding: 0 20px;
   margin: 0 auto;
 }
+
+@media (min-width: @tablet-width) {
+  .page-form__wrapper {
+    width: 768px;
+  }
+
+  .page-form__background-image {
+    width: 100%;
+    height: 520px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .page-form__wrapper {
+    width: 1200px;
+  }
+}
