--- a/source/less/blocks/page-photo.less
+++ b/source/less/blocks/page-photo.less
@@ -26,3 +26,14 @@
   list-style: none;
   outline: 5px dotted red;
 }
+
+@media (min-width: @tablet-width) {
+  .page-photo__wrapper {
+    width: 768px;
+  }
+
+  .page-photo__background-image {
+    width: 100%;
+    height: 520px;
+  }
+}
