--- a/source/less/global.less
+++ b/source/less/global.less
@@ -1,6 +1,16 @@
 body {
+  min-width: 320px;
+  margin: 0;
+  padding: 0;
   font-size: 18px;
   line-height: 40px;
   font-family: "PT Sans", "Arial", sans-serif;
   font-weight: normal;
+}
+
+@media (min-width: @tablet-width) {
+  body {
+    font-size: 21px;
+    line-height: 26px;
+  }
 }
