--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,11 +1,13 @@
 @import "fonts.less";
 @import "mixins.less";
+@import "variables.less";
 @import "global.less";
 @import "blocks/page-header.less";
 @import "blocks/site-list.less";
 @import "blocks/page-main.less";
 @import "blocks/advantages-list.less";
 @import "blocks/advantages-photo.less";
+@import "blocks/advantages.less";
 @import "blocks/advantages-other.less";
 @import "blocks/page-footer.less";
 @import "blocks/page-photo.less";
