--- a/source/less/blocks/advantages-other.less
+++ b/source/less/blocks/advantages-other.less
@@ -1,5 +1,7 @@
 .advantages-other {
   margin: 0;
+  padding: 0;
+  padding-left: 20px;
   list-style: none;
   text-transform: uppercase;
   text-align: center;
@@ -9,6 +11,7 @@
 }
 
 .advantages-other__item {
+  width: 280px;
   padding-top: 30px;
   border-bottom: 1px solid #d6d6d6;
 }
