--- a/source/less/blocks/gallery.less
+++ b/source/less/blocks/gallery.less
@@ -34,6 +34,7 @@
   .page-photo__description {
     width: 648px;
     margin: 0 auto;
+    margin-bottom: 70px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -45,7 +46,7 @@
     background-color: #f2f2f2;
   }
 
-  .gallery__item-img img {
+  .gallery__item:first-child {
     width: 100%;
   }
 }
@@ -55,12 +56,15 @@
     width: 1200px;
   }
 
-  .gallery,
-  .page-photo__description {
+  .gallery {
     width: 1200px;
   }
 
   .gallery__item {
     width: 400px;
+  }
+
+  .page-photo__description {
+    width: 440px;
   }
 }
