--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -1,8 +1,21 @@
 .page-main__wrapper {
   width: 320px;
-  padding: 0 20px;
   margin: 0 auto;
   outline: 5px dotted red;
+}
+
+.advantages__house {
+  width: 100%;
+  min-height: 263px;
+  background-image: url("../img/main-city-mobile@1x.jpg");
+  background-repeat: no-repeat;
+}
+
+.advantages__bridge {
+  width: 100%;
+  min-height: 263px;
+  background-image: url("../img/main-bridge-mobile@1x.jpg");
+  background-repeat: no-repeat;
 }
 
 .page-main__item {
@@ -40,11 +53,29 @@
   .page-main__title {
     margin-bottom: 50px;
   }
+
+  .advantages__house {
+    background-image: url("../img/main-city-tablet@1x.jpg");
+    background-size: 100% 100%;
+  }
+
+  .advantages__bridge {
+    background-image: url("../img/main-bridge-tablet@1x.jpg");
+    background-size: 100% 100%;
+  }
 }
 
 @media (min-width: @desktop-width) {
   .page-main__wrapper {
     width: 1200px;
     padding: 0 40px;
+  }
+
+  .advantages__house {
+    background-image: url("../img/main-city-desktop@1x.jpg");
+  }
+
+  .advantages__bridge {
+    background-image: url("../img/main-bridge-desktop@1x.jpg");
   }
 }
