--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -1,9 +1,56 @@
+.advantages__house {
+  width: 100%;
+  min-height: 263px;
+  background-image: url("../img/main-city-mobile@1x.jpg");
+  background-repeat: no-repeat;
+}
+
+.advantages__bridge {
+  width: 100%;
+  min-height: 263px;
+  background-image: url("../img/main-bridge-mobile@1x.jpg");
+  background-repeat: no-repeat;
+}
+
 @media (min-width: @tablet-width) {
   .advantages__wrapper {
     display: flex;
   }
 
+  .advantages__house {
+    min-height: 255px;
+    background-image: url("../img/main-city-tablet@1x.jpg");
+    background-size: 100% 100%;
+  }
+
+  .advantages__bridge {
+    background-image: url("../img/main-bridge-tablet@1x.jpg");
+    min-height: 255px;
+  }
+
   .advantages__wrapper--bridge {
     flex-direction: row-reverse;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .advantages__house {
+    background-image: url("../img/main-city-desktop@1x.jpg");
+    background-repeat: no-repeat;
+    background-position-x: 0;
+    background-position-y: -70px;
+    background-size: auto;
+  }
+
+  .advantages__bridge {
+    background-image: url("../img/main-bridge-desktop@1x.jpg");
+    background-repeat: no-repeat;
+    background-position-x: 0;
+    background-position-y: -75px;
+    background-size: auto;
+  }
+
+  .advantages__wrapper--bridge {
+    margin-bottom: 2px;
   }
 }
