--- a/source/less/blocks/gallery.less
+++ b/source/less/blocks/gallery.less
@@ -1,7 +1,8 @@
+.gallery {
+  position: relative;
+}
 .gallery__item {
   width: 280px;
-  display: flex;
-  flex-direction: column;
   margin: 0;
   margin-left: 20px;
   .font-normal-photo();
@@ -10,14 +11,91 @@
   color: #000000;
 }
 
+.gallery__item::before {
+  content: "";
+  position: absolute;
+  top: -8px;
+  left: 0;
+  width: 320px;
+  height: 1px;
+  background-color: #e5e5e5;
+}
+
+.gallery__item:nth-child(2)::before {
+  top: 407px;
+}
+
+.gallery__item:nth-child(3)::before {
+  top: 823px;
+}
+
+.gallery__item:nth-child(4)::before {
+  top: 1238px;
+}
+
+.gallery__item:last-child::after {
+  content: "";
+  position: absolute;
+  bottom: 9px;
+  left: 0;
+  width: 320px;
+  height: 1px;
+  background-color: #e5e5e5;
+}
+
 .gallery__author {
+  margin: 0;
+  margin-bottom: 8px;
   font-weight: normal;
   text-transform: none;
   color: #333333;
 }
 
 .gallery__figure {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   margin: 0;
+}
+
+.gallery__item-img {
+  margin-bottom: 10px;
+}
+
+.gallery__description {
+  width: 146px;
+}
+
+.gallery__item:nth-child(2) .gallery__description {
+  width: 179px;
+}
+
+.gallery__item:nth-child(3) .gallery__description {
+  width: 114px;
+  margin-top: -2px;
+}
+
+.gallery__item:nth-child(4) .gallery__description {
+  width: 101px;
+}
+
+.gallery__like {
+  position: relative;
+  margin: 0;
+  margin-bottom: 25px;
+  padding-left: 36px;
+}
+
+.gallery__like::before {
+  content: "";
+  position: absolute;
+  top: -2px;
+  left: 0;
+  width: 25px;
+  height: 25px;
+  opacity: 0.3;
+  background-image: url("../img/icon-like.svg");
+  background-repeat: no-repeat;
 }
 
 @media (min-width: @tablet-width) {
@@ -25,13 +103,52 @@
     width: 768px;
   }
 
-  .page-photo__background-image {
-    width: 100%;
-    height: 520px;
+  .gallery__figure {
+    position: relative;
   }
 
-  .gallery,
-  .page-photo__description {
+  .gallery__like {
+    position: absolute;
+    right: 32px;
+    bottom: 3px;
+  }
+
+  .gallery__item:first-child .gallery__like {
+    right: 20px;
+    bottom: 2px;
+  }
+
+  .gallery__like::before {
+    top: -1px;
+    left: 3px;
+  }
+
+  .gallery__item-img {
+    width: 100%;
+    margin-top: 0;
+    margin-bottom: 8px;
+    height: auto;
+  }
+
+  .gallery__item img {
+    width: 100%;
+    height: 268px;
+  }
+
+  .gallery__item:first-child img {
+    height: auto;
+  }
+
+  .gallery__description {
+    margin-left: 19px;
+  }
+
+  .gallery__author {
+    margin-left: 20px;
+    margin-bottom: 17px;
+  }
+
+  .gallery {
     width: 648px;
     margin: 0 auto;
     margin-bottom: 70px;
@@ -46,6 +163,11 @@
     background-color: #f2f2f2;
   }
 
+  .gallery__item::before,
+  .gallery__item::after {
+    display: none;
+  }
+
   .gallery__item:first-child {
     width: 100%;
   }
@@ -57,14 +179,57 @@
   }
 
   .gallery {
+    position: relative;
     width: 1200px;
   }
 
   .gallery__item {
     width: 400px;
+    height: 270px;
+    order: 1;
   }
 
-  .page-photo__description {
-    width: 440px;
+  .gallery__item:first-child {
+    height: 400px;
+  }
+
+  .gallery__description-position {
+    position: absolute;
+    width: 100%;
+    height: 65px;
+    padding-top: 19px;
+    bottom: 0;
+    color: #ffffff;
+    background-color: #000000;
+    opacity: 0.3;
+  }
+
+  .gallery__item:first-child .gallery__description-position {
+    bottom: -133px;
+  }
+
+  .gallery__author,
+  .gallery__like {
+    position: absolute;
+    color: #ffffff;
+  }
+
+  .gallery__item-img {
+    height: 268px;
+    margin: 0;
+  }
+
+  .gallery__item img {
+    height: 100%;
+  }
+
+  .gallery__item:last-child .gallery__description {
+    width: 155px;
+    margin-left: 0;
+  }
+
+  .gallery__like::before {
+    opacity: 1;
+    background-image: url("../img/icon-like-2.svg");
   }
 }
