--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,14 +1,16 @@
 .page-footer__wrapper {
+  display: flex;
+  flex-direction: column;
   width: 320px;
-  padding: 40px 0 0 0;
+  padding: 22px 0 0 0;
   margin: 0 auto;
   text-align: center;
   color: #000000;
   background-color: #fefefe;
-  outline: 5px dotted red;
 }
 
 .page-footer__visit {
+  margin-bottom: 37px;
   font-size: 21px;
   line-height: 26px;
   font-family: "PT Sans", "Arial", sans-serif;
@@ -30,6 +32,13 @@
   .page-footer {
     width: 768px;
     margin: 0 auto;
+    margin-top: 31px;
+  }
+
+  .page-footer__visit {
+    width: 150px;
+    margin-top: 10px;
+    margin-left: -6px;
   }
 
   .page-footer__wrapper {
@@ -37,17 +46,24 @@
     height: 120px;
     padding: 0 60px;
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
   }
 }
 
 @media (min-width: @desktop-width) {
   .page-footer {
-    width: 1280px;
+    width: 1200px;
+    margin-top: 0;
   }
 
   .page-footer__wrapper {
     width: 1200px;
-    padding: 0 40px;
+    padding: 0;
+    padding-top: 31px;
+  }
+
+  .page-footer__visit {
+    margin-left: 112px;
   }
 }
