--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,32 +1,56 @@
-.page-header {
-  position: relative;
-}
-
 .page-header__wrapper {
+  position: relative;
   width: 320px;
   margin: 0 auto;
-  outline: 5px dotted red;
+}
+
+.page-header__logo {
+  position: relative;
+  width: 100%;
+  height: 56px;
+  background-color: #ffffff;
+}
+
+.page-header__logo-image {
+  position: absolute;
+  bottom: -27px;
+  right: 108px;
+  z-index: 2;
+  height: 84px;
 }
 
 @media (min-width: @tablet-width) {
   .page-header__wrapper {
     width: 768px;
+    background-color: #ffffff;
+  }
+
+  .main-navigation {
+    position: relative;
+  }
+
+  .page-header__logo {
+    position: absolute;
+    background-color: transparent;
   }
 
   .page-header__logo-image {
     position: absolute;
-    left: 374px;
+    top: -56px;
+    left: 331px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .page-header__wrapper {
     width: 1200px;
-    padding: 0 40px;
   }
 
   .page-header__logo-image {
     position: absolute;
-    left: 600px;
+    width: 190px;
+    height: 190px;
+    left: 504px;
+    top: -102px;
   }
 }
