--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -1,74 +1,165 @@
 .page-main__wrapper {
   width: 320px;
+  min-height: 56px;
   margin: 0 auto;
-  outline: 5px dotted red;
 }
 
-.advantages__house {
+.page-main__promo {
+  position: relative;
   width: 100%;
-  min-height: 263px;
-  background-image: url("../img/main-city-mobile@1x.jpg");
+  height: 390px;
+  margin-bottom: 39px;
+  background-image: url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
+  background-position-y: 0;
+  background-position-x: -225px;
 }
 
-.advantages__bridge {
+.page-main__promo::before {
+  content: "";
+  position: absolute;
+  top: -4px;
+  left: 20px;
   width: 100%;
-  min-height: 263px;
-  background-image: url("../img/main-bridge-mobile@1x.jpg");
+  height: 100%;
+  background-image: url("../img/text-sedona-index.svg");
+  background-repeat: no-repeat;
+  background-size: 280px 400px;
+}
+
+.page-main__background-triangle {
+  position: absolute;
+  bottom: -13px;
+  left: 0;
+  width: 100%;
+  height: 40px;
+  background-image: url("../img/bg-intro-triangle-mobile.svg");
   background-repeat: no-repeat;
 }
 
 .page-main__item {
+  position: relative;
   text-align: center;
   text-transform: uppercase;
-  outline: 5px dotted red;
+}
+
+.page-main__town-title::before {
+  content: "";
+  position: absolute;
+  top: 14px;
+  left: 135px;
+  width: 12px;
+  height: 2px;
+  background-color: #000000;
 }
 
 .page-main__town-title {
-  margin-bottom: 40px;
+  margin-bottom: 27px;
   .font-bold();
 }
 
 .page-main__title {
+  display: block;
+  width: 260px;
+  margin-left: 30px;
+  margin-bottom: 26px;
   font-size: 14px;
   line-height: 26px;
   font-family: "PT Sans", "Arial", sans-serif;
   color: #333333;
+  letter-spacing: 0.05px;
 }
 
 @media (min-width: @tablet-width) {
   .page-main__wrapper {
     width: 768px;
     padding: 0;
+    background-color: #ffffff;
   }
 
-  .page-main__background-image {
+  .page-main__promo {
+    position: relative;
     width: 100%;
+    height: 525px;
+    margin-bottom: 43px;
+    background-image: url("../img/bg-back-tablet@1x.jpg");
+    background-repeat: no-repeat;
+    background-position-y: 0;
+    background-position-x: 0;
+  }
+
+  .page-main__promo::before {
+    content: "";
+    position: absolute;
+    top: 78px;
+    left: 154px;
+    width: 460px;
+    height: 350px;
+    background-image: url("../img/text-sedona-index.svg");
+    background-repeat: no-repeat;
+  }
+
+.page-main__promo::before {
+    height: 430px;
+    top: 2px;
+    left: 155px;
+    background-repeat: no-repeat;
+    background-size: 460px 500px;
+  }
+
+  .page-main__background-triangle {
+    height: 58px;
+    bottom: 5px;
+    background-image: url("../img/bg-intro-triangle-tablet.svg");
   }
 
   .page-main__town-title {
+    width: 450px;
+    margin-left: 160px;
     .font-bold-table();
+    letter-spacing: 0.08px;
+    br {
+      display: none;
+    }
+  }
+
+  .page-main__town-title::before {
+    width: 13px;
+    height: 3px;
+    top: 12px;
+    left: 249px;
   }
 
   .page-main__title {
-    margin-bottom: 50px;
-  }
-
-  .advantages__house {
-    background-image: url("../img/main-city-tablet@1x.jpg");
-    background-size: 100% 100%;
-  }
-
-  .advantages__bridge {
-    background-image: url("../img/main-bridge-tablet@1x.jpg");
-    background-size: 100% 100%;
+    width: auto;
+    margin-bottom: 51px;
+    margin-left: 0;
   }
 }
 
 @media (min-width: @desktop-width) {
   .page-main__wrapper {
     width: 1200px;
-    padding: 0 40px;
+  }
+  .page-main__promo {
+    background-image: url("../img/bg-back-desktop@1x.jpg");
+  }
+  .page-main__promo::before {
+    left: 370px;
+  }
+
+  .page-main__background-triangle {
+    height: 58px;
+    bottom: 5px;
+    background-image: url("../img/bg-intro-triangle-desktop.svg");
+  }
+
+  .page-main__town-title {
+    padding-left: 215px;
+  }
+
+  .page-main__town-title::before {
+    left: 465px;
   }
 
   .advantages__house {
