--- a/source/less/fonts.less
+++ b/source/less/fonts.less
@@ -1,13 +1,13 @@
 @font-face {
   font-family: "PT Sans";
-  src: url("../fonts/ptsans.woff") format("woff");
+  src: url("../fonts/ptsans.woff2") format("woff2"), url("../fonts/ptsans.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "PT Sans bold";
-  src: url("../fonts/ptsansbold.woff") format("woff");
+  font-family: "PT Sans";
+  src: url("../fonts/ptsansbold.woff2") format("woff2"), url("../fonts/ptsansbold.woff") format("woff");
   font-weight: bold;
   font-style: normal;
 }
