--- a/source/less/global.less
+++ b/source/less/global.less
@@ -8,9 +8,34 @@ body {
   font-weight: normal;
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+.visually-hidden:not(:focus):not(:active) {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 @media (min-width: @tablet-width) {
   body {
     font-size: 21px;
     line-height: 26px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  body {
+    padding: 0 40px;
+    background-color: #f2f2f2;
   }
 }
