--- a/source/less/style.less
+++ b/source/less/style.less
@@ -3,13 +3,18 @@
 @import "variables.less";
 @import "global.less";
 @import "blocks/page-header.less";
+@import "blocks/main-navigation.less";
 @import "blocks/site-list.less";
 @import "blocks/page-main.less";
 @import "blocks/advantages-list.less";
 @import "blocks/advantages-photo.less";
 @import "blocks/advantages.less";
 @import "blocks/advantages-other.less";
+@import "blocks/hotels.less";
+@import "blocks/map.less";
 @import "blocks/page-footer.less";
+@import "blocks/social.less";
+@import "blocks/copyright.less";
 @import "blocks/page-photo.less";
 @import "blocks/page-form.less";
 @import "blocks/gallery.less";
