--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,5 +1,5 @@
 .social {
-  width: 151px;
+  width: 150px;
   margin-left: 84px;
   margin-bottom: 33px;
 }
@@ -19,7 +19,7 @@
 }
 
 .social__link {
-  padding: 12px;
+  padding: 10px 13px;
 
   &:hover {
     background-color: #669ec0;
@@ -32,8 +32,7 @@
 }
 
 .social__item--facebook .social__link {
-  padding: 17px;
-  padding-bottom: 7px;
+  padding: 14px 15px 7px 17px;
 }
 
 .social__item svg {
@@ -43,7 +42,6 @@
 
 @media (min-width: @tablet-width) {
   .social {
-    width: 155px;
     margin-left: 107px;
   }
 }
