--- a/source/less/blocks/gallery.less
+++ b/source/less/blocks/gallery.less
@@ -49,6 +49,7 @@
   margin-bottom: 8px;
   font-weight: normal;
   text-transform: none;
+  text-align: left;
   color: #333333;
 }
 
@@ -82,9 +83,9 @@
 
 .gallery__like {
   position: relative;
+  width: 100px;
   margin: 0;
   margin-bottom: 25px;
-  padding-left: 36px;
 }
 
 .gallery__like::before {
@@ -110,18 +111,30 @@
 
   .gallery__like {
     position: absolute;
-    right: 32px;
+    right: -10px;
     bottom: 3px;
   }
 
+  .gallery__item:nth-child(3) .gallery__like {
+    right: -6px;
+  }
+
+  .gallery__item:nth-child(4) .gallery__like {
+    right: -8px;
+  }
+
   .gallery__item:first-child .gallery__like {
-    right: 20px;
+    right: -14px;
     bottom: 2px;
   }
 
   .gallery__like::before {
     top: -1px;
     left: 3px;
+  }
+
+  .gallery__item:nth-child(3) .gallery__like::before {
+    left: 9px;
   }
 
   .gallery__item-img {
@@ -140,13 +153,29 @@
     height: auto;
   }
 
+  .gallery__item:nth-child(3) .gallery__description {
+    margin-top: 0;
+    margin-left: 22px;
+  }
+
   .gallery__description {
     margin-left: 19px;
   }
 
   .gallery__author {
-    margin-left: 20px;
+    margin-left: 21px;
     margin-bottom: 17px;
+    text-align: left;
+  }
+
+  .gallery__item:last-child .gallery__author {
+    margin-top: -2px;
+    margin-left: 19px;
+  }
+
+  .gallery__item:last-child .gallery__like::before {
+    top: 0;
+    left: 7px;
   }
 
   .gallery {
