--- a/source/less/blocks/page-photo.less
+++ b/source/less/blocks/page-photo.less
@@ -1,3 +1,9 @@
+.page-photo__wrapper {
+  width: 320px;
+  margin: 0 auto;
+  text-align: center;
+}
+
 .page-photo__promo {
   position: relative;
   height: 160px;
@@ -8,10 +14,16 @@
   background-position-x: -225px;
 }
 
-.page-photo__wrapper {
-  width: 320px;
-  margin: 0 auto;
-  text-align: center;
+.page-photo__promo::before {
+  content: "";
+  position: absolute;
+  top: -4px;
+  left: 45px;
+  width: 90%;
+  height: 100%;
+  background-image: url("../img/text-sedona.svg");
+  background-repeat: no-repeat;
+  background-size: 230px 150px;
 }
 
 .page-photo__background-triangle {
@@ -75,9 +87,10 @@
     top: 94px;
     left: 155px;
     width: 460px;
-    height: 80px;
+    height: 100px;
     background-image: url("../img/text-sedona.svg");
     background-repeat: no-repeat;
+    background-size: 100%;
   }
 
   .page-photo__background-image {
@@ -109,6 +122,14 @@
 }
 
 @media (min-width: @desktop-width) {
+  .page-photo__promo {
+    height: 300px;
+    margin-bottom: 112px;
+    background-image: url("../img/bg-back-desktop@1x.jpg");
+    background-repeat: no-repeat;
+    background-position-y: -218px;
+  }
+
   .page-photo__promo::before {
     top: 100px;
     left: 370px;
@@ -118,14 +139,6 @@
     height: 70px;
     bottom: -13px;
     background-image: url("../img/bg-intro-triangle-desktop.svg");
-  }
-
-  .page-photo__promo {
-    height: 300px;
-    margin-bottom: 112px;
-    background-image: url("../img/bg-back-desktop@1x.jpg");
-    background-repeat: no-repeat;
-    background-position-y: -218px;
   }
 
   .page-photo__description {
