--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -132,6 +132,10 @@
 }
 
 @media (min-width: @desktop-width) {
+  .page-main {
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+  }
+
   .page-main__wrapper {
     width: 1200px;
   }
