--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -4,3 +4,10 @@
     background-repeat: no-repeat;
   }
 }
+
+@media (min-width: @desktop-width) {
+  .map img {
+    width: 100%;
+    background-image: url("../img/bg-map-desktop@1x.jpg");
+  }
+}
