--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   width: 320px;
-  padding: 22px 0 0 0;
   margin: 0 auto;
   text-align: center;
   color: #000000;
@@ -55,12 +54,14 @@
   .page-footer {
     width: 1200px;
     margin-top: 0;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
   }
 
   .page-footer__wrapper {
     width: 1200px;
     padding: 0;
     padding-top: 31px;
+    z-index: -10;
   }
 
   .page-footer__visit {
