--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -10,6 +10,8 @@
   margin: 0;
   padding: 0;
   list-style: none;
+  margin-left: 3px;
+  width: 150px;
 }
 
 .social__item {
@@ -32,7 +34,11 @@
 }
 
 .social__item--facebook .social__link {
-  padding: 14px 15px 7px 17px;
+  padding: 14px 19px 7px 18px;
+}
+
+.social__item--youtube .social__link {
+  padding-top: 9px;
 }
 
 .social__item svg {
