--- a/source/less/global.less
+++ b/source/less/global.less
@@ -38,4 +38,8 @@ img {
     padding: 0 40px;
     background-color: #f2f2f2;
   }
+
+  .wrapper-shadow {
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+  }
 }
