--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -21,7 +21,7 @@
 }
 
 .social__link {
-  padding: 10px 13px;
+  padding: 12px 14px;
 
   &:hover {
     background-color: #669ec0;
@@ -34,11 +34,15 @@
 }
 
 .social__item--facebook .social__link {
-  padding: 14px 19px 7px 18px;
+  padding: 15px 19px 10px 18px;
 }
 
 .social__item--youtube .social__link {
-  padding-top: 9px;
+  padding: 11px 11px 12px 12px;
+}
+
+.social__item:nth-child(2) svg {
+  margin-top: 14px;
 }
 
 .social__item svg {
