--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -21,7 +21,7 @@
 }
 
 .social__link {
-  padding: 10px 14px;
+  padding: 12px 14px;
 
   &:hover {
     background-color: #669ec0;
@@ -34,11 +34,11 @@
 }
 
 .social__item--facebook .social__link {
-  padding: 12px 19px 9px 18px;
+  padding: 13px 19px 10px 18px;
 }
 
 .social__item--youtube .social__link {
-  padding: 9px 12px 12px 13px;
+  padding: 11px 12px 12px 13px;
 }
 
 .social__item:nth-child(2) svg {
@@ -53,6 +53,18 @@
 @media (min-width: @tablet-width) {
   .social {
     margin-left: 107px;
+  }
+
+  .social__link {
+    padding: 9px 14px 11px 14px;
+  }
+
+  .social__item--facebook .social__link {
+    padding: 11px 19px 9px 18px;
+  }
+
+  .social__item--youtube .social__link {
+    padding: 9px 12px 12px 13px;
   }
 }
 
