--- a/source/less/blocks/page-photo.less
+++ b/source/less/blocks/page-photo.less
@@ -118,13 +118,13 @@
 
   .page-photo__video {
     height: 705px;
+    margin-bottom: 45px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .page-photo__video {
     height: 720px;
-    margin: 0;
   }
 
   .page-photo__promo {
