--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -1,3 +1,7 @@
+.page-main {
+  margin-bottom: 22px;
+}
+
 .page-main__wrapper {
   width: 320px;
   min-height: 56px;
@@ -71,6 +75,10 @@
 }
 
 @media (min-width: @tablet-width) {
+  .page-main {
+    margin-bottom: 33px;
+  }
+
   .page-main__wrapper {
     width: 768px;
     padding: 0;
@@ -132,6 +140,10 @@
 }
 
 @media (min-width: @desktop-width) {
+  .page-main {
+    margin-bottom: 0;
+  }
+
   .page-main__wrapper {
     width: 1200px;
   }
