--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -10,18 +10,18 @@
   margin: 0;
   padding: 0;
   list-style: none;
-  margin-left: 3px;
   width: 150px;
 }
 
 .social__item {
+  display: flex;
   width: 46px;
   height: 48px;
   background-color: #81b3d2;
 }
 
 .social__link {
-  padding: 12px 14px;
+  width: 100%;
 
   &:hover {
     background-color: #669ec0;
@@ -31,14 +31,6 @@
     opacity: 0.3;
     background-color: #5496bd;
   }
-}
-
-.social__item--facebook .social__link {
-  padding: 13px 19px 10px 18px;
-}
-
-.social__item--youtube .social__link {
-  padding: 11px 12px 12px 13px;
 }
 
 .social__item:nth-child(2) svg {
@@ -53,18 +45,6 @@
 @media (min-width: @tablet-width) {
   .social {
     margin-left: 107px;
-  }
-
-  .social__link {
-    padding: 9px 14px 11px 14px;
-  }
-
-  .social__item--facebook .social__link {
-    padding: 11px 19px 9px 18px;
-  }
-
-  .social__item--youtube .social__link {
-    padding: 9px 12px 12px 13px;
   }
 }
 
