--- a/source/less/mixins.less
+++ b/source/less/mixins.less
@@ -25,3 +25,10 @@
   font-family: "PT Sans", "Arial", sans-serif;
   font-weight: normal;
 }
+
+.font-normal-form() {
+  font-size: 14px;
+  line-height: 26px;
+  font-family: "PT Sans", "Arial", sans-serif;
+  font-weight: normal;
+}
