--- a/source/less/blocks/page-photo.less
+++ b/source/less/blocks/page-photo.less
@@ -123,11 +123,16 @@
 }
 
 @media (min-width: @desktop-width) {
+  .page-photo__wrapper {
+    width: 1200px;
+  }
+
   .page-photo__video {
     height: 720px;
   }
 
   .page-photo__promo {
+    width: 100%;
     height: 300px;
     margin-bottom: 112px;
     background-image: url("../img/bg-back-desktop@1x.jpg");
