--- a/source/less/style.less
+++ b/source/less/style.less
@@ -16,5 +16,8 @@
 @import "blocks/social.less";
 @import "blocks/copyright.less";
 @import "blocks/page-photo.less";
-@import "blocks/page-form.less";
 @import "blocks/gallery.less";
+@import "blocks/page-form.less";
+@import "blocks/feedback.less";
+@import "blocks/form.less";
+@import "blocks/fieldset.less";
