--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -17,22 +17,15 @@
 .copyright svg {
   width: 40px;
   height: 50px;
-
-  path {
-    fill: #000000;
-  }
+  color: #000000;
 }
 
 .copyright__link:hover svg {
-  path {
-    fill: #81b3d2;
-  }
+  color: #81b3d2;
 }
 
 .copyright__link:active svg {
-  path {
-    fill: rgba(0, 0, 0, 0.3);
-  }
+  color: rgba(0, 0, 0, 0.3);
 }
 
 @media (min-width: @tablet-width) {
