задание на оценку

--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -19,6 +19,13 @@
   background-position-x: -225px;
 }
 
+@media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+  .page-main__promo {
+    background-image: url("../img/bg-back-mobile@2x.jpg");
+    background-position-x: 0;
+  }
+}
+
 .page-main__promo::before {
   content: "";
   position: absolute;
@@ -96,6 +103,16 @@
     background-position-x: 0;
   }
 
+  @media (min-width: @tablet-width) and (min-resolution: 144dpi),
+    (min-width: @tablet-width) and (min-resolution: 1.5dppx) {
+    .page-main__promo {
+      background-image: url("../img/bg-back-tablet@2x.jpg");
+      background-size: 1338px auto;
+      background-position-y: -100px;
+      background-position-x: -300px;
+    }
+  }
+
   .page-main__promo::before {
     content: "";
     position: absolute;
@@ -152,6 +169,14 @@
     background-image: url("../img/bg-back-desktop@1x.jpg");
   }
 
+  @media (min-width: @desktop-width) and (min-resolution: 144dpi),
+    (min-width: @desktop-width) and (min-resolution: 1.5dppx) {
+    .page-main__promo {
+      background-image: url("../img/bg-back-desktop@2x.jpg");
+      background-size: cover;
+    }
+  }
+
   .page-main__promo::before {
     left: 370px;
   }
@@ -160,6 +185,13 @@
     height: 58px;
     bottom: 5px;
     background-image: url("../img/bg-intro-triangle-desktop.svg");
+  }
+
+  @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+    .page-main__background-triangle {
+      position: absolute;
+      bottom: -2px;
+    }
   }
 
   .page-main__town-title {
