--- a/source/less/blocks/page-form.less
+++ b/source/less/blocks/page-form.less
@@ -13,6 +13,14 @@
   background-position-x: -225px;
 }
 
+@media (min-resolution: 144dpi),
+  (min-resolution: 1.5dppx) {
+  .page-form__promo {
+    background-image: url("../img/bg-back-mobile@2x.jpg");
+    background-position-x: 0;
+  }
+}
+
 .page-form__promo::before {
   content: "";
   position: absolute;
@@ -77,6 +85,16 @@
     background-position-x: 0;
   }
 
+  @media (min-width: @tablet-width) and (min-resolution: 144dpi),
+    (min-width: @tablet-width) and (min-resolution: 1.5dppx) {
+    .page-form__promo {
+      background-image: url("../img/bg-back-tablet@2x.jpg");
+      background-size: 1338px auto;
+      background-position-y: -335px;
+      background-position-x: -300px;
+    }
+  }
+
   .page-form__promo::before {
     content: "";
     position: absolute;
@@ -136,6 +154,14 @@
     background-image: url("../img/bg-back-desktop@1x.jpg");
     background-repeat: no-repeat;
     background-position-y: -218px;
+  }
+
+  @media (min-width: @desktop-width) and (min-resolution: 144dpi),
+    (min-width: @desktop-width) and (min-resolution: 1.5dppx) {
+    .page-photo__promo {
+      background-image: url("../img/bg-back-desktop@2x.jpg");
+      background-size: cover;
+    }
   }
 
   .page-form__promo::before {
