--- a/source/less/blocks/page-photo.less
+++ b/source/less/blocks/page-photo.less
@@ -14,6 +14,13 @@
   background-position-x: -225px;
 }
 
+@media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+  .page-photo__promo {
+    background-image: url("../img/bg-back-mobile@2x.jpg");
+    background-position-x: 0;
+  }
+}
+
 .page-photo__promo::before {
   content: "";
   position: absolute;
@@ -81,6 +88,16 @@
     background-position-x: 0;
   }
 
+  @media (min-width: @tablet-width) and (min-resolution: 144dpi),
+    (min-width: @tablet-width) and (min-resolution: 1.5dppx) {
+    .page-photo__promo {
+      background-image: url("../img/bg-back-tablet@2x.jpg");
+      background-size: 1338px auto;
+      background-position-y: -335px;
+      background-position-x: -300px;
+    }
+  }
+
   .page-photo__promo::before {
     content: "";
     position: absolute;
@@ -138,6 +155,14 @@
     background-image: url("../img/bg-back-desktop@1x.jpg");
     background-repeat: no-repeat;
     background-position-y: -218px;
+  }
+
+  @media (min-width: @desktop-width) and (min-resolution: 144dpi),
+    (min-width: @desktop-width) and (min-resolution: 1.5dppx) {
+    .page-photo__promo {
+      background-image: url("../img/bg-back-desktop@2x.jpg");
+      background-size: cover;
+    }
   }
 
   .page-photo__promo::before {
